--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>ADMIN</title>
     <!-- BOOSTRAP 4 -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://bootswatch.com/4/materia/bootstrap.min.css">
 </head>
 
@@ -30,6 +31,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
