--- a/app/templates/inscripciones/inscripciones.html
+++ b/app/templates/inscripciones/inscripciones.html
@@ -165,15 +165,15 @@
                 <td><a href="{{ inf.Autorizacion }}" target="_blank">LINK</a></td>
                 <td><a href="{{ inf.Comprobante }}" target="_blank">LINK</a></td>
                 <td>
-                    <a href="https://wa.me/{{ inf.Telefono }}" class="btn btn-success" target="_blank" style="padding: 5px; display: inline-block; width: auto;">
-                        <img src="{{ url_for('static', filename='img/whatsapp_ico.png') }}" style="width: 40px; height: 40px; margin: 2px;" />
+                    <a href="https://wa.me/{{ inf.Telefono }}" class="btn btn-success" target="_blank"
+                        style="padding: 5px; display: inline-block; width: auto;">
+                        <img src="{{ url_for('static', filename='img/whatsapp_ico.png') }}"
+                            style="width: 40px; height: 40px; margin: 2px;" />
                     </a>
-                    <a href="{{ url_for('teams_bp.confirm_team', id=inf.ID) }}" class="btn btn-success"
+                    <a href="{{ url_for('teams_bp.cargar_team', id=inf.ID) }}" class="btn btn-success"
                         onclick="return confirm('¿Estás seguro de que deseas confirmar este equipo?');">OK</a>
-                    <a href="{{ url_for('teams_bp.get_team', id=inf.ID) }}" class="btn btn-secondary">Editar</a>
-                    <a href="{{ url_for('teams_bp.delete_team', id=inf.ID) }}" class="btn btn-danger btn-delete"
-                        onclick="return confirm('¿Estás seguro de que deseas eliminar este equipo?');">ELIMINAR</a>
-                    
+                    <a href="{{ url_for('teams_bp.edit_team', id=inf.ID) }}" class="btn btn-secondary">Editar</a>
+
                 </td>
             </tr>
             {% endfor %}
@@ -186,48 +186,50 @@
     <table class="table table-striped table-hover table-bordered table-sm bg-white">
         <thead>
             <tr>
-                <td>ID</td>
-                <td>Equipo</td>
-                <td>Colegio</td>
-                <td>Deporte</td>
-                <td>Categoria</td>
-                <td>DNI</td>
-                <td>Correo</td>
-                <td>Miembros</td>
-                <td>Grupo</td>
-                <td>-------</td>
+                <th>ID</th>
+                <th>Equipo</th>
+                <th>Colegio</th>
+                <th>Deporte</th>
+                <th>Categoría</th>
+                <th>DNI</th>
+                <th>Correo</th>
+                <th>Miembros</th>
+                <th>Grupo</th>
+                <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
             {% for inf in Table2_inf %}
             <tr>
-                <td>{{inf.ID}}</td>
-                <td>{{inf.Equipo}}</td>
-                <td>{{inf.Colegio}}</td>
-                <td>{{inf.Deporte}}</td>
-                <td>{{inf.Categoria}}</td>
-                <td>{{inf.DNI}}</td>
-                <td>{{inf.Correo}}</td>
-                <td>{{inf.Miembros}} jugadores <br />
-                    {{inf.Acompañantes}} Acompañantes
-                </td>
-                <td>{{inf.Grupo}}</td>
+                <td>{{ inf.ID }}</td>
+                <td>{{ inf.Equipo }}</td>
+                <td>{{ inf.Colegio }}</td>
+                <td>{{ inf.Deporte }}</td>
+                <td>{{ inf.Categoria }}</td>
+                <td>{{ inf.DNI }}</td>
+                <td>{{ inf.Correo }}</td>
                 <td>
-                    <a class="btn btn-success" target="_blank" style="padding: 5px; display: inline-block; width: auto;"
-                        href="https://wa.me/{{ inf.Telefono }}">
-                        <img src="{{ url_for('static', filename='img/whatsapp_ico.png') }}" style="width: 40px; height: 40px; margin: 2px;" />
+                    {{ inf.Miembros }} jugadores <br />
+                    {{ inf.Acompañantes }} Acompañantes
+                </td>
+                <td>{{ inf.Grupo }}</td>
+                <td>
+                    <a class="btn btn-success btn-sm" target="_blank" href="https://wa.me/{{ inf.Telefono }}">
+                        <img src="{{ url_for('static', filename='img/whatsapp_ico.png') }}" class="img-fluid"
+                            style="width: 24px; height: 24px;">
                     </a>
-                    <a class="btn btn-primary" style="padding: 5px; display: inline-block; width: auto;"
-                        href="{{ url_for('teams_bp.get_team2', id=inf.ID) }}">
-                        <img src="{{ url_for('static', filename='img/settings_ico.png') }}" style="width: 40px; height: 40px; margin: 2px;" />
+                    <a class="btn btn-primary btn-sm" href="{{ url_for('teams_bp.edit_team', id=inf.ID) }}">
+                        <img src="{{ url_for('static', filename='img/settings_ico.png') }}" class="img-fluid"
+                            style="width: 24px; height: 24px;">
                     </a>
-                    <form action="{{ url_for('teams_bp.asignar_grupo', id=inf.ID) }}" method="POST" class="d-flex flex-row">
+                    <!-- <form action="{{ url_for('teams_bp.asignar_grupo', id=inf.ID) }}" method="POST"
+                        class="d-flex flex-row mt-1">
                         <select class="form-control" name="grupo">
-                            {% for letra in 'ABCDEF'%}
-                                <option value={{letra}}>Grupo {{letra}}</option>
+                            {% for letra in 'ABCDEF' %}
+                            <option value="{{ letra }}">Grupo {{ letra }}</option>
                             {% endfor %}
                         </select>
-                        <button type="submit" class="ms-2 btn btn-info">></button>
+                        <button type="submit" class="ms-2 btn btn-info btn-sm">></button>
                     </form>
                     {{ inf.equipo_id }}
                     <div class="
@@ -235,13 +237,15 @@
                             bg-success
                         {% else %}
                             bg-danger
-                        {% endif %}">.</div>
+                        {% endif %} mt-1" style="height: 10px;">
+                    </div> -->
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
+
 
 <script>
     function toggleTable(checkbox, tableId) {
