--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -15,7 +15,18 @@
 
     <!-- NAVIGATION  -->
     <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" style="padding: 14px; margin-left: 40px;">--- ADMIN PAGE ---</a>
+        <div>
+            <a class="navbar-brand" style="padding: 14px; margin-left: 40px;" href="{{ url_for('main.general') }}">
+                --- ADMIN PAGE ---
+            </a>
+            
+        </div>
+        <ul class="d-flex">
+            <a href="{{ url_for('teams_bp.inscripciones') }}" class="nav-link">Inscripciones</a>
+            <a href="{{ url_for('sport_bp.partidos') }}" class="nav-link">Partidos</a>
+        </ul>
+            
+        </ul>
         <a class="nav-link" href="{{ url_for('main.general') }}" style="margin-right: 30px;"><img src="static/images/home_ico.png" alt="#" /></a>
     </nav>
 
